# hello-public

./: README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: deploy-azure.yaml  deploy-env.yaml  deploy_prod.yaml  deployment_status.yaml  linting.yaml  spellcheck.yaml  tests-azure.yaml
src/: main.py
