[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Sofia Lindqvist <sofia@binarysecurity.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
black = "^24.10.0"
mypy = "^1.14.0"
flake8 = "^7.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
